Fixed z-index issue with right-img

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -83,3 +83,6 @@ body > div > section > div {
 .left-text {
     z-index: 1;
 }
+.right-img {
+    z-index: -1;
+}
